# infrared_camera_ros

./: CMakeLists.txt  README.md  package.xml
launch/: infrared_camera.launch  infrared_camera_rviz.launch
rviz_config/: infrared.rviz
src/: camera_class.cpp  main.cpp
